# 8080-Emulator

./: .gitignore  CMakeLists.txt  README.md
retro8080/: CMakeLists.txt
retro8080/include/: emulator.h  processor.h  states.h
retro8080/src/: emulator.cpp  instructions.cpp  libretro.cpp  processor.cpp  states.cpp
retro8080/tests/: CMakeLists.txt  processor_test.cpp  states_test.cpp
src/: CMakeLists.txt  emulator.cpp  instructions.cpp  processor.cpp  states.cpp
src/include/: emulator.h  instructions.h  processor.h  states.h
src/tests/: CMakeLists.txt  emulator_test.cpp
test/: CMakeLists.txt  emulator_test.cpp  processor_test.cpp  states_test.cpp  test_file
